# snowboy

Comprehensive_App/photo/: README.md  SNOWBOY_SETUP.md  build.gradle  gradle.properties  local.properties  settings.gradle
Comprehensive_App/photo/app/: build.gradle
Comprehensive_App/photo/app/src/main/: AndroidManifest.xml
Comprehensive_App/photo/app/src/main/cpp/: CMakeLists.txt  snowboy-wrapper.cpp
Comprehensive_App/photo/app/src/main/java/ai/kitt/snowboy/: SnowboyDetect.java  SnowboyVad.java  snowboy.java  snowboyJNI.java
Comprehensive_App/photo/app/src/main/java/com/example/frontcamera/: MainActivity.kt
Comprehensive_App/photo/app/src/main/res/layout/: activity_main.xml
Comprehensive_App/photo/app/src/main/res/mipmap-hdpi/: ic_launcher.xml
Comprehensive_App/photo/app/src/main/res/mipmap-xhdpi/: ic_launcher_round.xml
Comprehensive_App/photo/app/src/main/res/mipmap-xxxhdpi/: ic_launcher_round.xml
Comprehensive_App/photo/app/src/main/res/values/: strings.xml  themes.xml
Comprehensive_App/snowboy/swig/Android/: Android.mk  Makefile
